# CorelDRAWer-Skill

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  adelaide_ediacaran.dxf  adelaide_ediacaran.json  adelaide_xsection.json  batch_3.bas  batch_fetch_nature.py  borehole_column.bas  cap_carbonate_transect.json  carboniferous_cyclothem.dxf  carboniferous_cyclothem.json  cdr_batch.py  cdr_com_auto.py  cdr_commander.py  cdr_enhance.py  cdr_export.bas  cdr_helpers.bas  cdr_import.bas  cdr_processor.py  cdr_stats.bas  cdr_template.bas  cdr_template_gen.py  cdr_tools.py  coreldrawer.py  cretaceous_oae.dxf  cretaceous_oae.json  data_template.json  devonian_kellwasser.dxf  devonian_kellwasser.json  dxf_export.py  extract_nature_figure.py  generate_column.py  generate_cross_section.py  (+30 more)
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
nature_figures/: s43247-020-00029-y_01_649x1192.raw  s43247-020-00071-w_03_950x651.raw  s43247-021-00205-8_05_1350x918.raw  s43247-021-00205-8_09_1000x525.raw  s43247-021-00249-w_02_908x566.raw  s43247-021-00264-x_09_426x46.raw  s43247-022-00412-x_01_530x1793.raw  s43247-022-00631-2_01_1000x599.raw  s43247-024-01280-3_06_816x396.raw  s43247-024-01744-6_02_717x475.raw  s43247-024-01856-z_03_1000x1338.raw  s43247-025-02388-w_04_1350x489.raw  s43247-025-02398-8_06_1453x696.raw  s43247-025-02398-8_13_1744x595.raw  s43247-025-02398-8_15_1369x451.raw  s43247-025-02627-0_08_490x37.raw  s43247-025-02627-0_22_477x36.raw  s43247-025-02627-0_35_487x37.raw  s43247-025-02789-x_01_1000x1075.raw  (+17 more)
(+9 files in other folders)
